add websocket notifications and test scripts
